radio button fix

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
                     <div class ="radio_pos">
                         <p>Have you taken surveys on any of the following subjects?</p>
-                        <input type="radio" id="subject1" name ="contact" value="subject1">
+                        <input type="radio" id="subject1" name ="subject" value="subject1">
                         <label for="subject1">Technology</label>
                         <br>
-                        <input type="radio" id="subject2" name ="contact" value="subject2">
+                        <input type="radio" id="subject2" name ="subject" value="subject2">
                         <label for="subject2">Selfcare</label>
                         <br>
                         <input type="radio" id="Subject3" name ="subject" value="subject3">
